Replace globe icon with Gmail logo in Work view

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
             <div id="view-browser" class="view-section items-center justify-center px-6 py-12 fade-in">
                 <div class="mb-10 w-48 h-48 bg-primary/5 rounded-full flex items-center justify-center relative">
                     <div class="absolute inset-0 bg-primary/10 blur-3xl rounded-full"></div>
-                    <i data-lucide="globe" class="text-primary w-20 h-20 relative z-10"></i>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/512px-Gmail_icon_%282020%29.svg.png"
+                        alt="Gmail Logo" class="w-24 h-24 relative z-10 object-contain drop-shadow-lg">
                 </div>
                 <h2 id="gmail-tool-title" data-i18n="gmailTitle" class="text-2xl font-black mb-4 text-slate-800">Gmail
                     Free Tool</h2>
