Rename 'Gmail Free Tool' to 'Gmail Father Tool'

--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                 earnBtn: 'পয়েন্ট নিন',
                 earnSub: '+১ ক্রেডিট',
                 adStatus: 'সরাসরি ক্রেডিট সংগ্রহ করুন',
-                gmailTitle: 'Gmail Free Tool',
+                gmailTitle: 'Gmail Father Tool',
                 gmailDesc: 'জিমেইল তৈরি করার জন্য নিচের বাটনে ক্লিক করুন। প্রতি ক্রিয়েশনে পাবেন আকর্ষণীয় রিওয়ার্ড।',
                 gmailBtn: 'Gmail Create',
                 leaderTitle: 'লিডারবোর্ড',
@@ -634,7 +634,7 @@
                 earnBtn: 'Get Points',
                 earnSub: '+1 Credit',
                 adStatus: 'Click to earn credits',
-                gmailTitle: 'Gmail Free Tool',
+                gmailTitle: 'Gmail Father Tool',
                 gmailDesc: 'Click the button below to create a Gmail account. Earn rewards for each creation.',
                 gmailBtn: 'Gmail Create',
                 leaderTitle: 'Leaderboard',
@@ -663,7 +663,7 @@
                 earnBtn: 'Получить очки',
                 earnSub: '+1 Кредит',
                 adStatus: 'Нажмите для получения кредитов',
-                gmailTitle: 'Gmail Free Tool',
+                gmailTitle: 'Gmail Father Tool',
                 gmailDesc: 'Нажмите кнопку ниже, чтобы создать аккаунт Gmail. Зарабатывайте награды за каждое создание.',
                 gmailBtn: 'Создать Gmail',
                 leaderTitle: 'Таблица лидеров',
