Replace all 'Gmail Father' with 'Gmail Father Tool' everywhere

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gmail Father - Premium Clean Edition</title>
+    <title>Gmail Father Tool - Premium Clean Edition</title>
 
     <!-- External Resources -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -61,7 +61,7 @@
         class="fixed inset-0 z-[100] bg-white flex flex-col items-center justify-center transition-opacity duration-500">
         <div class="flex flex-col items-center gap-4">
             <div class="w-12 h-12 border-4 border-primary border-t-transparent rounded-full animate-spin"></div>
-            <p class="text-primary text-xs font-bold uppercase tracking-widest animate-pulse">Gmail Father</p>
+            <p class="text-primary text-xs font-bold uppercase tracking-widest animate-pulse">Gmail Father Tool</p>
         </div>
     </div>
 
@@ -74,7 +74,7 @@
                     <img src="https://i.ibb.co.com/rKc5Qm12/photo-2026-02-20-02-46-22.jpg" alt="Logo"
                         class="w-full h-full object-cover">
                 </div>
-                <h1 class="text-3xl font-black text-primary">Gmail Father</h1>
+                <h1 class="text-3xl font-black text-primary">Gmail Father Tool</h1>
                 <p id="auth-desc" data-i18n="authDesc" class="text-slate-500 text-sm font-medium">আপনার অ্যাকাউন্ট তৈরি
                     করার বিশ্বস্ত অ্যাপ
                 </p>
@@ -137,7 +137,7 @@
             <div class="flex items-center gap-2">
                 <img src="https://i.ibb.co.com/rKc5Qm12/photo-2026-02-20-02-46-22.jpg" alt="Logo"
                     class="w-9 h-9 rounded-xl shadow-sm border border-slate-100">
-                <h1 class="text-base font-black text-slate-800 tracking-tight">Gmail Father</h1>
+                <h1 class="text-base font-black text-slate-800 tracking-tight">Gmail Father Tool</h1>
             </div>
 
             <div class="bg-primary/10 px-3 py-1.5 rounded-2xl border border-primary/20 flex items-center gap-2">
